# graphiti

./: SETUP_INSTRUCTIONS.md  quickstart_neo4j_custom.py  run_mcp_server.sh  setup_env.sh  test_connection.py
examples/quickstart/: SETUP_INSTRUCTIONS.md  quickstart_custom.py  quickstart_fixed.py  run_quickstart.sh
mcp_server/: README.md  docker-compose.yml  graphiti_mcp_server.py  mcp_config_example.json  mcp_config_stdio_example.json  pyproject.toml  run_mcp_server.sh  test_stdio.py
